--- a/src/03-Stat_Experiments_&_Significance_Testing/chapter_03_py.ipynb
+++ b/src/03-Stat_Experiments_&_Significance_Testing/chapter_03_py.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "from scipy import stats\n",
+    "import statsmodels.api as sm\n",
     "from sklearn.utils import resample\n",
     "import random\n",
     "\n",
-    "import seaborn as sns\n",
     "import matplotlib.pylab as plt"
    ]
   },
@@ -950,6 +950,58 @@
     "The p-value, 7.60×10^−33 (= 0.000000...), is far below significance thresholds like 0.05 or even 0.001, indicating **strong evidence against the null hypothesis** (that any variation observed in the distribution of interior digits is merely due to random chance). This suggests the data likely deviate from a uniform distribution, possibly due to manipulation or fabrication.  \n",
     "\n",
     "This also could've been testes with a resampling approach of Chi-Square."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Power and sample size\n",
+    "\n",
+    "- Finding out how big a sample size you need requires thinking ahead to the statistical test you plan to conduct. \n",
+    "- You must specify the minimum size of the effect that you want to detect. \n",
+    "- You must also specify the required probability of detecting that effect size (power). \n",
+    "- Finally, you must specify the significance level (alpha) at which the test will be conducted."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample Size: 116602.393\n"
+     ]
+    }
+   ],
+   "source": [
+    "effect_size = sm.stats.proportion_effectsize(0.0121, 0.011)\n",
+    "analysis = sm.stats.TTestIndPower()\n",
+    "result = analysis.solve_power(effect_size=effect_size,\n",
+    " alpha=0.05, power=0.8, alternative='larger')\n",
+    "print('Sample Size: %.3f' % result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Tests summary:\n",
+    "- **Permutation tests** are useful for comparing means or other statistics between two groups when you want to avoid assumptions about the data distribution.\n",
+    "- **Resampling procedures** help assess the significance of observed differences in proportions or rates, particularly useful in A/B testing scenarios.\n",
+    "- **Chi-square tests for independence** are used when you want to determine if there is an association between two categorical variables.\n",
+    "- **Chi-square tests for goodness of fit** are used to see if a single categorical variable's distribution matches a theoretical distribution. ​"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Chapter summary:\n",
+    "Experimental design principles —randomizing subjects into groups with different treatments— help draw valid conclusions about treatment effectiveness. Including a control treatment of “no change” is ideal. The formality about statistical inference and its theory behind, is mostly unneeded from a data science perspective. However, acknowledging random variation's potential to mislead is crucial. Intuitive resampling methods (permutation and bootstrap) enable data scientists to assess the impact of chance variation on their analyses."
    ]
   }
  ],
