chapter 04 - linear regression

--- a/src/04-Regression_&_Prediction/chapter_04_py.ipynb
+++ b/src/04-Regression_&_Prediction/chapter_04_py.ipynb
@@ -141,9 +141,7 @@
     "\n",
     "lung.plot.scatter(x='Exposure', y='PEFR', s=25, color='white', edgecolor='black', figsize=(5,4))\n",
     "plt.plot(x_range, y_range, color='r')\n",
-    "plt.tight_layout()\n",
-    "\n",
-    "x_range"
+    "plt.tight_layout()"
    ]
   }
  ],
