chapter 05 - logit reg. projects - end chapter

--- a/src/05-Classification/chapter_05.ipynb
+++ b/src/05-Classification/chapter_05.ipynb
@@ -23,7 +23,7 @@
     "  - **Gaussian** Naive bayes: good at handling continuous/numeric values.\n",
     "\n",
     "\n",
-    "> [**Spam emails classifier**](https://github.com/matuneville/ml-projects/tree/main/projects)  \n",
+    "> [**Spam emails classifier**](https://github.com/matuneville/ml-projects/blob/main/projects/spam-email-classifier/naive-bayes-spam-email-classifier.ipynb)  \n",
     "\n"
    ]
   },
@@ -382,8 +382,21 @@
     "- R² and RMSE are not metrics of logistic regression.\n",
     "- Logistic regression is popular because it is computationally fast and produces a model that can be scored to new data with only a few arithmetic operations.\n",
     "\n",
-    "> [**Rainy weather classifier**](https://github.com/matuneville/ml-projects/tree/main/projects)  \n"
+    "### Evaluating classification models\n",
+    "- Accuracy (the percent of predicted classifications that are correct) is a first step in evaluating a model.\n",
+    "- Other metrics (recall, specificity, precision) focus on more specific performance characteristics (e.g., recall measures how good a model is at correctly identifying 1s). They are useful when the classes are not balanced.\n",
+    "- AUC (area under the ROC curve) is a common metric for the ability of a model to distinguish 1s from 0s. A curve near the top left corner indicates a good classifier: high TPR (detects positive cases well) and low FPR (makes few errors in classifying negatives as positives).\n",
+    "- Similarly, lift measures how effective a model is in identifying the 1s, and it is often calculated decile by decile, starting with the most probable 1s.\n",
+    "\n",
+    "> [**Rainy weather classifier**](https://github.com/matuneville/ml-projects/blob/main/projects/weather-classifier/logistic-regression-rainy-classifier.ipynb)  \n",
+    "\n",
+    "> [**Digits recognition**](https://github.com/matuneville/ml-projects/blob/main/projects/handwritten-digits-recognition/logistic-regression-digits-recognizer.ipynb)  \n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
